openshift/micro1-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: micro1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: micro1
  template:
    metadata:
      labels:
        app: micro1
    spec:
      containers:
      - name: micro1
        image: image-registry.openshift-image-registry.svc:5000/milena-hernandezb-dev/micro1:latest
        ports:
        - containerPort: 5000
