openshift/micro2-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: micro2
spec:
  replicas: 1
  selector:
    matchLabels:
      app: micro2
  template:
    metadata:
      labels:
        app: micro2
    spec:
      containers:
      - name: micro2
        image: image-registry.openshift-image-registry.svc:5000/milena-hernandezb-dev/micro2:latest
        ports:
        - containerPort: 8000
