openshift/micro1-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: micro1
spec:
  selector:
    app: micro1
  ports:
  - port: 8000
    targetPort: 8000
