openshift/micro2-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: micro2
spec:
  selector:
    app: micro2
  ports:
  - port: 8000
    targetPort: 8000
